--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -59,6 +59,7 @@ local-checks-to-skip =			\
 
 useless_free_options =		\
   --name=sexpr_free		\
+  --name=VIR_FREE		\
   --name=xmlFree		\
   --name=xmlXPathFreeContext	\
   --name=xmlXPathFreeObject
