--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -287,7 +287,7 @@
 
     <pre>
         ...
-        &lt;clock sync="localtime"/&gt;
+        &lt;clock offset="localtime"/&gt;
 	...</pre>
 
     <dl>
