--- a/configure.in
+++ b/configure.in
@@ -287,13 +287,6 @@ if test "$with_qemu" = "yes" ; then
 fi
 AM_CONDITIONAL([WITH_QEMU], [test "$with_qemu" = "yes"])
 
-with_bridge=no
-if test "$with_qemu" = "yes" -o "$with_lxc" = "yes"; then
-    with_bridge=yes
-    AC_DEFINE_UNQUOTED([WITH_BRIDGE], 1, [whether bridge code is needed])
-fi
-AM_CONDITIONAL([WITH_BRIDGE], [test "$with_bridge" = "yes"])
-
 if test "$with_uml" = "yes" ; then
     AC_DEFINE_UNQUOTED([WITH_UML], 1, [whether UML driver is enabled])
 fi
@@ -729,6 +722,12 @@ if test "$with_network" = "yes" ; then
 fi
 AM_CONDITIONAL([WITH_NETWORK], [test "$with_network" = "yes"])
 
+with_bridge=no
+if test "$with_qemu:$with_lxc:$with_network" != "no:no:no"; then
+    with_bridge=yes
+    AC_DEFINE_UNQUOTED([WITH_BRIDGE], 1, [whether bridge code is needed])
+fi
+AM_CONDITIONAL([WITH_BRIDGE], [test "$with_bridge" = "yes"])
 
 dnl
 dnl Storage driver checks
