--- a/configure.in
+++ b/configure.in
@@ -1285,7 +1285,8 @@ AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
           tests/xmconfigdata/Makefile \
           tests/xencapsdata/Makefile \
           tests/confdata/Makefile \
-          examples/domain-events/events-c/Makefile)
+          examples/domain-events/events-c/Makefile \
+          examples/hellolibvirt/Makefile)
 
 AC_MSG_NOTICE([])
 AC_MSG_NOTICE([Configuration summary])
