--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -18,6 +18,7 @@ src/node_device_conf.c
 src/nodeinfo.c
 src/openvz_conf.c
 src/openvz_driver.c
+src/pci.c
 src/proxy_internal.c
 src/qemu_conf.c
 src/qemu_driver.c
