Core internal driver stub for sVirt support (Jams Morris & Dan Walsh)

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -343,6 +343,7 @@ msg_gen_function += umlLog
 msg_gen_function += umlReportError
 msg_gen_function += virConfError
 msg_gen_function += virDomainReportError
+msg_gen_function += virSecurityReportError
 msg_gen_function += virHashError
 msg_gen_function += virLibConnError
 msg_gen_function += virLibDomainError
