--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -140,7 +140,7 @@ UML_DRIVER_SOURCES =						\
 NETWORK_DRIVER_SOURCES =					\
 		network_driver.h network_driver.c
 
-# And finally storage backend specific impls
+# Storage backend specific impls
 STORAGE_DRIVER_SOURCES =					\
 		storage_driver.h storage_driver.c		\
 		storage_backend.h storage_backend.c
@@ -164,6 +164,11 @@ STORAGE_DRIVER_DISK_SOURCES =					\
 
 STORAGE_HELPER_DISK_SOURCES =					\
 		parthelper.c
+
+
+# Security framework and drivers for various models
+SECURITY_DRIVER_SOURCES =                                      \
+		security.h security.c
 
 
 NODE_DEVICE_DRIVER_SOURCES =					\
@@ -378,6 +383,10 @@ libvirt_driver_nodedev_la_LDFLAGS += -module -avoid-version
 endif
 endif
 
+
+libvirt_driver_security_la_SOURCES = $(SECURITY_DRIVER_SOURCES)
+noinst_LTLIBRARIES += libvirt_driver_security.la
+libvirt_la_LIBADD += libvirt_driver_security.la
 
 # Add all conditional sources just in case...
 EXTRA_DIST +=							\
