--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -23,6 +23,7 @@ src/proxy_internal.c
 src/qemu_conf.c
 src/qemu_driver.c
 src/remote_internal.c
+src/security.c
 src/storage_backend.c
 src/storage_backend_disk.c
 src/storage_backend_fs.c
