--- a/configure.in
+++ b/configure.in
@@ -640,6 +640,45 @@ AM_CONDITIONAL([HAVE_SELINUX], [test "$with_selinux" != "no"])
 AC_SUBST([SELINUX_CFLAGS])
 AC_SUBST([SELINUX_LIBS])
 
+
+AC_ARG_WITH([secdriver-selinux],
+  [  --with-secdriver-selinux         use SELinux security driver],
+  [],
+  [with_secdriver_selinux=check])
+
+if test "$with_selinux" != "yes" ; then
+  if test "$with_secdriver_selinux" = "check" ; then
+    with_secdriver_selinux=no
+  else
+    AC_MSG_ERROR([You must install the SELinux development package in order to compile libvirt])
+  fi
+else
+  old_cflags="$CFLAGS"
+  old_libs="$LIBS"
+  CFLAGS="$CFLAGS $SELINUX_CFLAGS"
+  LIBS="$CFLAGS $SELINUX_LIBS"
+
+  fail=0
+  AC_CHECK_FUNC([selinux_virtual_domain_context_path], [], [fail=1])
+  AC_CHECK_FUNC([selinux_virtual_image_context_path], [], [fail=1])
+  CFLAGS="$old_cflags"
+  LIBS="$old_libs"
+
+  if test "$fail" = "1" ; then
+    if test "$with_secdriver_selinux" = "check" ; then
+      with_secdriver_selinux=no
+    else
+      AC_MSG_ERROR([You must install the SELinux development package in order to compile libvirt])
+    fi
+  else
+    with_secdriver_selinux=yes
+    AC_DEFINE_UNQUOTED([WITH_SECDRIVER_SELINUX], 1, [whether SELinux security driver is available])
+  fi
+fi
+AM_CONDITIONAL([WITH_SECDRIVER_SELINUX], [test "$with_secdriver_selinux" != "no"])
+
+
+
 dnl NUMA lib
 AC_ARG_WITH([numactl],
   [  --with-numactl         use numactl for host topology info],
@@ -1319,6 +1358,10 @@ AC_MSG_NOTICE([   NetFS: $with_storage_fs])
 AC_MSG_NOTICE([     LVM: $with_storage_lvm])
 AC_MSG_NOTICE([   iSCSI: $with_storage_iscsi])
 AC_MSG_NOTICE([    Disk: $with_storage_disk])
+AC_MSG_NOTICE([])
+AC_MSG_NOTICE([Security Drivers])
+AC_MSG_NOTICE([])
+AC_MSG_NOTICE([ SELinux: $with_secdriver_selinux])
 AC_MSG_NOTICE([])
 AC_MSG_NOTICE([Driver Loadable Modules])
 AC_MSG_NOTICE([])
