--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -24,6 +24,7 @@ src/qemu_conf.c
 src/qemu_driver.c
 src/remote_internal.c
 src/security.c
+src/security_selinux.c
 src/storage_backend.c
 src/storage_backend_disk.c
 src/storage_backend_fs.c
