--- a/src/qemu.conf
+++ b/src/qemu.conf
@@ -58,3 +58,12 @@
 # example here before you set this
 #
 # vnc_password = "XYZ12345"
+
+
+# The default security driver is SELinux. If SELinux is disabled
+# on the host, then the security driver will automatically disable
+# itself. If you wish to disable QEMU SELinux security driver while
+# leaving SELinux enabled for the host in general, then set this
+# to 'none' instead
+#
+# security_driver = "selinux"
