Include 'CHECK: ' prefix when printing name of each syntax-check rule that is run

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -32,7 +32,7 @@ local-checks-available = \
 # Arrange to print the name of each syntax-checking rule just before running it.
 $(syntax-check-rules): %: %.m
 $(patsubst %, %.m, $(syntax-check-rules)):
-	@echo $(patsubst sc_%.m, %, $@)
+	@echo "CHECK:" $(patsubst sc_%.m, %, $@)
 
 local-check := $(filter-out $(local-checks-to-skip), $(local-checks-available))
 
