Improve security label error reporting & verification (Dan Walsh)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -419,7 +419,8 @@ EXTRA_DIST +=							\
 		$(STORAGE_DRIVER_DISK_SOURCES)			\
 		$(NODE_DEVICE_DRIVER_SOURCES)			\
 		$(NODE_DEVICE_DRIVER_HAL_SOURCES)		\
-		$(NODE_DEVICE_DRIVER_DEVKIT_SOURCES)
+		$(NODE_DEVICE_DRIVER_DEVKIT_SOURCES)		\
+		$(SECURITY_DRIVER_SELINUX_SOURCES)
 
 #
 # Build our version script.  This is composed of three parts:
