--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -61,6 +61,10 @@
                 <span>Terminology and goals of libvirt API</span>
               </li>
               <li>
+                <a href="api.html">API concepts</a>
+                <span>The libvirt API concepts</span>
+              </li>
+              <li>
                 <a href="archdomain.html">Domains</a>
                 <span>Managing virtual machines</span>
               </li>
