--- a/configure.in
+++ b/configure.in
@@ -1349,6 +1349,7 @@ AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
 	  include/libvirt/Makefile include/libvirt/libvirt.h \
 	  python/Makefile python/tests/Makefile \
           qemud/Makefile \
+          tools/Makefile \
           tests/Makefile proxy/Makefile \
           tests/xml2sexprdata/Makefile \
           tests/sexpr2xmldata/Makefile \
