Disable vbox driver for mingw32 builds

--- a/mingw32-libvirt.spec.in
+++ b/mingw32-libvirt.spec.in
@@ -50,6 +50,7 @@ MinGW Windows libvirt virtualization library.
   --without-qemu \
   --without-lxc \
   --without-uml \
+  --without-vbox \
   --without-openvz \
   --without-libvirtd
 make
