Added new virt-xml-validate tool to mingw specfile

--- a/mingw32-libvirt.spec.in
+++ b/mingw32-libvirt.spec.in
@@ -76,6 +76,7 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root)
 %{_mingw32_bindir}/libvirt-0.dll
 %{_mingw32_bindir}/virsh.exe
+%{_mingw32_bindir}/virt-xml-validate
 
 %{_mingw32_libdir}/libvirt.dll.a
 %{_mingw32_libdir}/libvirt.la
@@ -97,6 +98,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_mingw32_includedir}/libvirt/virterror.h
 
 %{_mingw32_mandir}/man1/virsh.1*
+%{_mingw32_mandir}/man1/virt-xml-validate.1*
 
 
 %changelog
