VirtualBox Documentation * docs/drvvbox.html.in docs/hvsupport.html.in docs/drivers.html.in   docs/sitemap.html.in docs/*.html: VirtualBox Documentation by   Pritesh Kothari Daniel

--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -144,6 +144,10 @@
                 <a href="storage.html">Storage</a>
                 <span>Driver for the storage management APIs</span>
               </li>
+              <li>
+                <a href="drvvbox.html">VirtualBox</a>
+                <span>Driver for VirtualBox</span>
+              </li>
             </ul>
           </li>
           <li>
